k8/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cohort
  labels:
    app.kubernetes.io/part-of: cohort-platform
    app.kubernetes.io/name: cohort
